--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(OJPractice)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(OJPractice chapter2/ch2_6.cpp chapter2/ch2_8.cpp)
+add_executable(OJPractice chapter2/ch2_9.cpp)
